WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88915
[BlackBerry] Crash when rendering web page that's being destroyed
https://bugs.webkit.org/show_bug.cgi?id=88915
Summary
[BlackBerry] Crash when rendering web page that's being destroyed
Arvid Nilsson
Reported
2012-06-12 14:17:27 PDT
At one stage in the tear down of web page, the compositor is disconnected from the web page so WebPageCompositorPrivate::m_webPage is 0. However, WebPageCompositorPrivate::render() doesn't check validity of m_webPage before calling into WebPage::compositor() to see if we're really the web page's compositor.
Attachments
Patch
(1.71 KB, patch)
2012-06-12 14:49 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2012-06-12 14:27:08 PDT
This is PR164943
Arvid Nilsson
Comment 2
2012-06-12 14:49:29 PDT
Created
attachment 147169
[details]
Patch
Rob Buis
Comment 3
2012-06-12 14:52:30 PDT
Comment on
attachment 147169
[details]
Patch LGTM.
WebKit Review Bot
Comment 4
2012-06-12 15:52:45 PDT
Comment on
attachment 147169
[details]
Patch Clearing flags on attachment: 147169 Committed
r120134
: <
http://trac.webkit.org/changeset/120134
>
WebKit Review Bot
Comment 5
2012-06-12 15:52:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug