[BlackBerry] Crash when rendering web page that's being destroyed https://bugs.webkit.org/show_bug.cgi?id=88915

Patch by Arvid Nilsson <anilsson@rim.com> on 2012-06-12
Reviewed by Rob Buis.

PR #164943

This was a null pointer dereference that happened when the compositor
was asked to render after being disconnected from its web page.

* Api/WebPageCompositor.cpp:
(BlackBerry::WebKit::WebPageCompositorPrivate::render):

Canonical link: https://commits.webkit.org/106758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120134 268f45cc-cd09-0410-ab3c-d52691b4dbfc